--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,5 +1,7 @@
 {
   "accentColor": "",
-  "cssTheme": "AnuPpuccin",
-  "theme": "system"
+  "cssTheme": "Minimal",
+  "theme": "system",
+  "interfaceFontFamily": "Adwaita Mono",
+  "textFontFamily": "Adwaita Mono,DejaVu Sans Mono,Andale Mono,JetBrainsMono Nerd Font Mono"
 }
