--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,1 +1,12 @@
-{}
+{
+  "pdfExportSettings": {
+    "pageSize": "A3",
+    "landscape": false,
+    "margin": "0",
+    "downscalePercent": 100
+  },
+  "foldIndent": true,
+  "showLineNumber": false,
+  "showIndentGuide": true,
+  "rightToLeft": true
+}
