--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,7 +1,7 @@
 {
   "accentColor": "",
-  "cssTheme": "AnuPpuccin",
-  "theme": "moonstone",
+  "cssTheme": "GitHub Theme",
+  "theme": "system",
   "interfaceFontFamily": "JetBrainsMonoNL Nerd Font",
   "textFontFamily": "JetBrainsMono Nerd Font Mono,Adwaita Mono,DejaVu Sans Mono,Andale Mono",
   "nativeMenus": false,
